fix: styling of pages (width) for mobile devices, styling of code block (width overflow) on Article

--- a/src/app/components/editorjs-parser/block-parser/parsers/code-block/code-block.component.scss
+++ b/src/app/components/editorjs-parser/block-parser/parsers/code-block/code-block.component.scss
@@ -18,7 +18,9 @@
         overflow-x: scroll;
         overflow-y: unset;
         word-wrap: break-word;
-        width: 425px;
+        width: 200px;
+        max-width: 100%;
+        min-width: 0;
     }
 
     table,
